--- a/Wall_Street_English/html/styles/common.css
+++ b/Wall_Street_English/html/styles/common.css
@@ -39,6 +39,7 @@ label input{vertical-align:middle; cursor:pointer}
 .ico-classroom{width: 64px; height: 64px; background-position: -192px -48px}
 .ico-teachvideo{width: 64px; height: 64px; background-position: -256px -48px}
 .ico-consult{width: 80px; height: 64px; background-position: 0 -112px}
+.ico-pointer{width: 32px; height: 48px; background-position: -120px 0}
 
 
 /*button*/
