--- a/Wall_Street_English/html/styles/index.css
+++ b/Wall_Street_English/html/styles/index.css
@@ -5,9 +5,12 @@
 .index-guide li{font-size: 3.2em; line-height: 2.5em; border-bottom: 0.0625em solid #cecece}
 .index-guide li a{display: block; padding: 0.625em 9.722%}
 .index-guide li a:hover{text-decoration: none; background-color: #f2f2f2}
-.index-guide li .tit{padding-left: 12.06%}
-.index-guide li .ico-main{margin-right: 16px}
-.index-guide li .ico-consult{margin-right: 0}
+.index-guide li .tit{float: left; white-space: nowrap}
+.index-guide li .tit .ico{margin-right: 16px}
+.index-guide li .tit .txt{padding-left: 12.06%}
+.index-guide li .pointer{float: right; line-height: 2.5em}
+.index-guide li .pointer .ico{}
 .index-guide .consult{border-bottom: none; background-color: #64cfe9; box-shadow: 0 0 30px 0 #333 inset}
+.index-guide .consult .tit .ico{margin-right: 0}
 .index-guide .welcome{border-bottom: none; background-color: #64cfe9; box-shadow: 0 0 30px 0 #333 inset; line-height: 1.25em}
-.index-guide .welcome .tit{margin-left: 0}
+.index-guide .welcome .tit .txt{padding-left: 0}
