--- a/Wall_Street_English/html/styles/index.css
+++ b/Wall_Street_English/html/styles/index.css
@@ -2,7 +2,7 @@
 
 /**********index**********/
 
-.index-guide{}
+.index-guide{color: #003359}
 
 .index-guide li{font-size: 3.2em; line-height: 2.5em; border-bottom: 0.0625em solid #cecece; padding: 0.625em 9.722%}
 .index-guide li:hover{background-color: #f2f2f2}
@@ -20,7 +20,7 @@
 .index-guide li .tit .ico-consult{width: 80px; background-position: 0 -160px}
 
 .index-guide li .pointer{float: right; line-height: 2.5em}
-.index-guide li .pointer .ico-pointer{width: 24px; height: 48px; background-position: -120px 0}
+.index-guide li .pointer .ico-pointer{width: 24px; height: 24px; background-position: -120px 0}
 
 .index-guide .consult{border-bottom: none; background-color: #64cfe9; box-shadow: 0 0 30px 0 #333 inset}
 .index-guide .consult .tit .ico{margin-right: 0}
@@ -36,7 +36,7 @@
 .login-box dt{font-size: 3em; line-height: 1.5em; padding: .3333em 0}
 .login-box .text{width: 96%; padding-left: 2%; padding-right: 2%}
 .login-box .exec{margin-top:6em; text-align: right}
-.login-box .exec .btn-submit{background-color: #f12c3e; width: 50%; color: #fff}
-.login-box .exec .btn-submit .ico{margin-left:18%}
+.login-box .exec .btn-submit{width: 50%}
+.login-box .exec .btn-submit .ico{margin:0 -18% 0 18%; background-position: -120px -24px}
 
 
