--- a/Wall_Street_English/html/styles/common.css
+++ b/Wall_Street_English/html/styles/common.css
@@ -9,7 +9,7 @@ canvas,object,embed,progress,audio,video,track,map,area,figure,figcaption,
 table,caption,tbody,tfoot,thead,tr,th,td,
 span,a,b,strong,em,mark,blockquote,code,del,abbr,dfn,big,small,time,i,acronym,address,cite,ins,kbd,q,samp,sub,sup,tt,var{margin:0; padding:0; border:none; font: inherit}
 
-body{font-size:62.5%; line-height: 1.5em; letter-spacing:0; font-family:"微软雅黑", "Arial", "Helvetica", "sans-serif"; background:#003359; color:#fff; cursor:default; vertical-align:baseline; word-wrap:break-word; word-break:break-all}
+body{font-size:62.5%; line-height: 1.5em; letter-spacing:0; font-family:"微软雅黑", "Arial", "Helvetica", "sans-serif"; background:#003359; color:#fff; cursor:default; vertical-align:baseline}
 
 :hover{transition-duration:.3s; transition-timing-function:ease; transition-property:color, border-color, background-color}
 
@@ -179,6 +179,8 @@ label input{vertical-align:middle; cursor:pointer}
 .maindetail .exec .btn .ico{margin: 0 5.862% 0 3.1034%}
 .maindetail .exec .btn-prev .ico{background-position: -96px 0; margin: 0 7.5% 0 -7.5%}
 .maindetail .exec .btn-next .ico{background-position: -120px -24px; margin: 0 -7.5% 0 7.5%}
+.maindetail .exec .btn-back {float: right}
+.maindetail .exec .btn-back .ico{background-position: -120px -24px; margin: 0 -7.5% 0 7.5%}
 
 
 /**********footer**********/
