--- a/Wall_Street_English/html/styles/leveltest.css
+++ b/Wall_Street_English/html/styles/leveltest.css
@@ -5,3 +5,14 @@
 
 .mainlist-leveltest .ico-main{background-position: 0 -224px}
 
+.maindetail-leveltest h3 .guide{}
+
+.maindetail-leveltest .score {font-size: 3.6em}
+.maindetail-leveltest .score span{color: #f12c3e}
+.maindetail-leveltest .comment{font-size: 3.6em; line-height: 1.5em; padding: .625em 9.722%; color: #64cfe9}
+
+.maindetail-leveltest .list-results {padding: .625em 9.722%}
+.maindetail-leveltest .list-results li {font-size: 3.6em; line-height: 1.5em; padding:.9444em 0 ; border-top: .0556em solid #d5d5d5}
+.maindetail-leveltest .list-results h4{font-size: 1em}
+.maindetail-leveltest .list-results .answer {margin-top: .8333em; color: #64cfe9}
+.maindetail-leveltest .list-results .correct {margin-top: .8333em; color: #f12c3e}
