leveltest-detail checkbox

--- a/Wall_Street_English/html/styles/leveltest.css
+++ b/Wall_Street_English/html/styles/leveltest.css
@@ -25,3 +25,8 @@
 .maindetail-leveltest .list-results .answer {margin-top: .8333em; color: #64cfe9}
 .maindetail-leveltest .list-results .correct {margin-top: .8333em; color: #f12c3e}
 
+.maindetail-leveltest .options .checkbox{float:left; width: 64px}
+.maindetail-leveltest .options .txt{margin-left: 74px}
+
+
+
