--- a/Wall_Street_English/html/styles/index.css
+++ b/Wall_Street_English/html/styles/index.css
@@ -23,12 +23,14 @@
 .index-guide li .pointer{float: right; line-height: 2.5em}
 .index-guide li .pointer .ico-pointer{width: 24px; height: 24px; background-position: -120px 0}
 
-.index-guide .consult{border-bottom: none; background-color: #64cfe9; box-shadow: 0 0 30px 0 #333 inset}
+.index-guide .consult{border-bottom: none; background-color: #64cfe9; /*box-shadow: 0 0 30px 0 #333 inset*/}
+.index-guide .consult a {color: #333}
 .index-guide .consult .tit .ico{margin-right: 0}
-.index-guide .welcome{border-bottom: none; background-color: #64cfe9; box-shadow: 0 0 30px 0 #333 inset; line-height: 1.25em}
+.index-guide .welcome{font-size:2.6em; line-height: 1.5384em; border-bottom: none; background-color: #64cfe9; /*box-shadow: 0 0 30px 0 #333 inset;*/}
+.index-guide .welcome a {padding-top: .7692em; padding-bottom: .7692em; color: #333}
 .index-guide .welcome .tit .txt{padding-left: 0}
 .index-guide .consult:hover,
-.index-guide .welcome:hover{background-color: #64cfe9; box-shadow: 0 0 20px 0 #333 inset}
+.index-guide .welcome:hover{/*box-shadow: 0 0 20px 0 #333 inset*/}
 
 
 /**********loginbox**********/
